Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,4 @@ steps:
 
 - task: PowerShell@2
   inputs:
-    filePath: '$(System.DefaultDirectory)'
-    workingDirectory: '**/'
+    filePath: '$(System.DefaultWorkingDirectory)\script_no_params.ps1'
