--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,4 @@ steps:
 
 - task: PowerShell@2
   inputs:
-    filePath: '$(System.DefaultWorkingDirectory)\script_no_params.ps1'
+    filePath: '$(System.DefaultWorkingDirectory)\test-script.ps1'
