--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,10 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
-
 - task: PowerShell@2
   inputs:
-    filePath: '**\test-script.ps1'
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      cwd
+      Write-Host "Hello World"
